manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnsy-api-deployment
  namespace: dnsy
  labels:
    app: dnsy-api
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: dnsy-api
  template:
    metadata:
      labels:
        app: dnsy-api
    spec:
      containers:
      - name: dnsy-api
        image: ghcr.io/cloudeyit/dnsy-api:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 8
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
          timeoutSeconds: 8
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred-ghcr
