manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dnsy-api-service
  namespace: dnsy
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: dnsy-api
  sessionAffinity: ClientIP
  type: ClusterIP
